# stg-aseprite

./: .gitignore  8x8.aseprite  8x8.json  CMakeLists.txt  Makefile  README.md  libjson-c.so.5  test.json
src/: main.c  test.c
src/STGAseprite/: STGAseprite.c  STGAseprite.h
